# Project-Yrke-Akademi-YH-AV24TR

./: .gitignore  AhmetsReadMe.md  README.md  binary.h  color.h  colors.h  howToUseDotGitIgnore.txt  index  index.c  jern.md  readmePlease.md  swapCase.h
.github/workflows/: CI-project.yml  exLazar.yml  main-auto-release.yml  main-ci-exec678.yml  main-exec678yml  main.yml
C Examination/: fileHandler.c  fileHandler.h  index  index.c
C++/Exam_C++/: Buffer.h  index  index.cpp
C++/Librarys_C++/: Colors.cpp  Colors.h
Continuous Integration/HomeWork/EX 3/: CMakeLists.txt
Continuous Integration/HomeWork/EX 3/lib/: greetings.cpp  greetings.h
Continuous Integration/HomeWork/EX 3/test/: test.cpp
Continuous Integration/HomeWork/EX 4/: CMakeLists.txt  run
Continuous Integration/HomeWork/EX 4/Test/: test.cpp
Continuous Integration/HomeWork/EX 4/lib/: list.cpp  list.h
Continuous Integration/Testing/Test 3/: CMakeLists.txt
Continuous Integration/Testing/Test 3/.cache/clangd/index/: IDate.h.FFE5FE2DF88964F8.idx  test.cpp.8CD35DC23718F7E3.idx  today.h.212043F453C24E75.idx
Continuous Integration/Testing/Test 3/.github/workflows/: test.yml
Continuous Integration/Testing/Test 3/includes/: IDate.hpp
Continuous Integration/Testing/Test 3/lib/date/: date.h  date.hpp
Continuous Integration/Testing/Test 3/lib/today/: today.h  today.hpp
Continuous Integration/Testing/Test 3/test/: test.cpp
Cpp/EXERCISE/: E1defineMacroIfElse.cpp
Cpp/practice/: test.cpp
Cpp/week50/: E1defineMacroIfElse.cpp  E2HexadecimalConversion.cpp  E3sumNumsLoop.cpp  E4Uppercase_RandomNumbers.cpp  E5randomNum_Generator.cpp  e6MatrixArray.cpp
DecriptWordGame/: index.c
EX 19/: index.c
EX 20/: index.c
EX 21/: index.c
EX 23/: index.c
EX 24/: index.c
EX 25/: index.c
EX 27/: index.c
EX 29/: index.c
EX 30/: index.c
EX 31/: index.c
EX 32/: index  index.c
EX 33/: index.c
EX 34/: index.c
EX 35/: index.c
EX 37/: index  index.c
EX 39/: index  index.c
EX 40/: index  index.c  list.c  list.h
EX 41/: index  index.c
EX 42/: index  index.c
EX 43/: index  index.c  stackList.c  stackList.h
EXTRAExercises/: MacroPrint.c
Exam/Warehouse/: CMakeLists.txt  main.cpp
LibTesting/: demo.c  demo.h
Librarys/: GRN.c  GRN.h  baseNum.c  baseNum.h  color.c  colors.h  mathFormulas.c  mathFormulas.h  sortArray.c  sortArray.h  stack.c  stack.h
SchoolEX/EX 1/: index  index.c
SchoolEX/EX 10/: index  index.c  queue.c  queue.h
SchoolEX/EX 11/: index  index.c  stack.c  stack.h
SchoolEX/EX 2/: index.c
SchoolEX/EX 3/: index  index.c
SchoolEX/EX 4/: index  index.c  test.txt
SchoolEX/EX 5/: index  index.c  test.txt
SchoolEX/EX 6/: index  index.c  text.txt
SchoolEX/EX 7/: index.c
SchoolEX/EX 8/: fileHandler.c  fileHandler.h  index.c
SchoolEX/EX 9/: index  index.c
Testing/FileHandler/: fileHandler.c  fileHandler.h  index  index.c
Testing/Queue Stack simulation/: index  index.c  queue.c  queue.h  stack.c  stack.h
WEEKS/: student.c  test.c
WEEKS/week41/: struct.c
WEEKS/week43/: notes.md
WEEKS/week44/: Notes.md  calculator.c  debugFixMain.c  e25.c  e26.c  e27.c  e28.c  e29.c  inClassExerCreateFunction.c  pointFunc.c
WEEKS/week45/: MtrxGrpExrcse.c  bubbleAlgorithm.c  classExercise.c  clsExerSwpPtr.c  clsExrBnryPrt.c  clsExrMerge  clsExrMerge.c  e30.c  e32.c  mtrxMultiGrp.c  soufienExample.c
WEEKS/week46/: e38.c  malloc  malloc.c  rLineByLine.c  realloc  realloc.c  story.txt  testFileFunc.c  text.txt  wedWordFinder.c
WEEKS/week47/: classE1.c  e39.c  e39Lib.c  notes.md  test.c
WEEKS/week48/: examPrep.c  test.txt
YunrusFirstFolder/: exec_6.c  rebase.txt  sub.c
exercises/: run.sh  test.c
exercises/hexaConverter/: hexaToBinary.c
exercises/personal/: numSearcher.c
exercises/tree/: tree.c
exercises/week41/: bashscri.sh  main.c  struct.c
noteBook/: NOTES.MD  miscInfo.md
program/: load  loading.c  main.c
snippet_selflearn/: JavaScript.js  binaryConverter.c  ifNULL.c  struct.c
snippet_selflearn/C/: automate.sh  snippet_1.c
snippet_selflearn/CPlusPlus/: TicTac.cpp  object.cpp
snippet_selflearn/lib/: baseNum.c
subDir/: ex081024.sh  ex241024.c  ex310124.c  exec_1-5.c  exec_10.c  exec_12.c  exec_13.c  exec_14.c  exec_16.c  exec_19.c  exec_20.c  exec_24.c  exec_27.c  exec_29.c  exec_32.c  exec_37_localstrtok.c  exec_39_gcdlcm.c  exec_39_gcdlcm.h  exec_40_multinode.c  exec_40_multinode.h  exec_40_multinode.main.c  exec_42_stack.c  exec_42_stack.main.c  exec_7.c  exec_9.c  main.c  readme.md  testbranch.c  week39_24.c  zLibRunner.c
subDir/C/: exec_11.c  exec_13.c  exec_15.c  exec_17.c  exec_18.c  exec_21_randomNsort.c  exec_22_reversecapital.c  exec_23.c  exec_25_uniquerandom.c  exec_26_struct.c  exec_27.c  exec_28_stringcompare.c  exec_30.c  exec_31.c  exec_33_hanoicounter.c  exec_34_recursive.c  exec_35_primecheck.c  exec_36.c  exec_39_gcdlcm.c  exec_39_gcdlcm.main.c  exec_40_multinode.c  exec_41_queue.c  (+7 more)
subDir/CI/class/example/250204/: CMakeLists.txt  main.cpp
subDir/CI/exec_3/: CMakeLists.txt  Makefile
subDir/CI/exec_3/lib/greet/: greet.cpp  greet.h
subDir/CI/exec_3/test/: test.cpp
subDir/CI/exec_4/: CMakeLists.txt  Makefile
subDir/CI/exec_4/lib/stack/: stack.hpp
subDir/CI/exec_4/test/: test.cpp
subDir/CI/exec_5/: CMakeLists.txt  Makefile
subDir/CI/exec_5/lib/queue/: queue.hpp
subDir/CI/exec_5/test/: test.cpp
subDir/assignments/DebounceDualTarget/test/: CMakeLists.txt
subDir/assignments/DebounceDualTarget/test/test_button/: bsp.c  bsp.h  test.c
(+499 files in other folders)
